styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto;
}

.header {
background-color: #1f2937;
display: flex;
padding: 0px 100px 0px 100px;
justify-content: space-between;
align-items: center;
}

.header h3 {
color: #f9faf8;
font-size: 24px;
}

.header a {
    color: #e5e7eb;
    font-size: 18px;
}

ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
}

.hero {
display: flex;
background-color: #1f2937;
padding: 56px 100px 56px 100px;
align-items: flex-start;
justify-content: space-between;
gap: 32px;
}

.hero h1 {
    color: #f9faf8;
    font-size: 48px;
    font-weight: extra-bold;
    margin: 0;
}

.hero p {
    color: #e5e7eb;
    font-size: 18px;
    margin: 0px;
}

.hero a {
color: #f9faf8;
}

.hero button {
    margin: 0;
}

.content {
display: flex;
flex-direction: column;
}

.info {
display: flex;
}

.quote {
display: flex;
}

.cta {
display: flex;
}

.footer {
display: flex;
}

button {
    background-color: #3882f6;
}

